@@ -3,8 +3,8 @@
  */
 package io.deephaven.parquet.base;
 
-import io.deephaven.parquet.base.util.Helpers;
-import io.deephaven.parquet.base.util.SeekableChannelsProvider;
+import io.deephaven.util.channel.SeekableChannelContext;
+import io.deephaven.util.channel.SeekableChannelsProvider;
 import org.apache.parquet.format.*;
 import org.apache.parquet.format.ColumnOrder;
 import org.apache.parquet.format.Type;
@@ -12,42 +12,59 @@ import org.apache.parquet.schema.*;
 
 import java.io.ByteArrayInputStream;
 import java.io.IOException;
+import java.net.URI;
 import java.nio.ByteBuffer;
 import java.nio.ByteOrder;
 import java.nio.channels.SeekableByteChannel;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.*;
 
+import static io.deephaven.util.channel.SeekableChannelsProvider.convertToURI;
+
 /**
- * Top level accessor for a parquet file
+ * Top level accessor for a parquet file which can read both from a file path string or a CLI style file URI,
+ * ex."s3://bucket/key".
  */
 public class ParquetFileReader {
     private static final int FOOTER_LENGTH_SIZE = 4;
     private static final String MAGIC_STR = "PAR1";
     static final byte[] MAGIC = MAGIC_STR.getBytes(StandardCharsets.US_ASCII);
+    public static final String FILE_URI_SCHEME = "file";
 
     public final FileMetaData fileMetaData;
     private final SeekableChannelsProvider channelsProvider;
-    private final Path rootPath;
+
+    /**
+     * If reading a single parquet file, root URI is the URI of the file, else the parent directory for a metadata file
+     */
+    private final URI rootURI;
     private final MessageType type;
 
-    public ParquetFileReader(final String filePath, final SeekableChannelsProvider channelsProvider)
+    public ParquetFileReader(final String source, final SeekableChannelsProvider channelsProvider)
+            throws IOException {
+        this(convertToURI(source), channelsProvider);
+    }
+
+    public ParquetFileReader(final URI parquetFileURI, final SeekableChannelsProvider channelsProvider)
             throws IOException {
         this.channelsProvider = channelsProvider;
-        // Root path should be this file if a single file, else the parent directory for a metadata
-        // file
-        rootPath =
-                filePath.endsWith(".parquet") ? Paths.get(filePath) : Paths.get(filePath).getParent();
-
+        if (!parquetFileURI.getRawPath().endsWith(".parquet") && FILE_URI_SCHEME.equals(parquetFileURI.getScheme())) {
+            // Construct a new file URI for the parent directory
+            rootURI = Path.of(parquetFileURI).getParent().toUri();
+        } else {
+            // TODO(deephaven-core#5066): Add support for reading metadata files from non-file URIs
+            rootURI = parquetFileURI;
+        }
         final byte[] footer;
-        try (final SeekableByteChannel readChannel = channelsProvider.getReadChannel(filePath)) {
+        try (final SeekableChannelContext channelContext = channelsProvider.makeContext();
+                final SeekableByteChannel readChannel =
+                        channelsProvider.getReadChannel(channelContext, parquetFileURI)) {
             final long fileLen = readChannel.size();
             if (fileLen < MAGIC.length + FOOTER_LENGTH_SIZE + MAGIC.length) { // MAGIC + data + footer +
                 // footerIndex + MAGIC
-                throw new ParquetFileReaderException(
-                        filePath + " is not a Parquet file (too small length: " + fileLen + ")");
+                throw new InvalidParquetFileException(
+                        parquetFileURI + " is not a Parquet file (too small length: " + fileLen + ")");
             }
 
             final long footerLengthIndex = fileLen - FOOTER_LENGTH_SIZE - MAGIC.length;
@@ -57,13 +74,13 @@ public class ParquetFileReader {
             final byte[] magic = new byte[MAGIC.length];
             Helpers.readBytes(readChannel, magic);
             if (!Arrays.equals(MAGIC, magic)) {
-                throw new ParquetFileReaderException(
-                        filePath + " is not a Parquet file. expected magic number at tail "
+                throw new InvalidParquetFileException(
+                        parquetFileURI + " is not a Parquet file. expected magic number at tail "
                                 + Arrays.toString(MAGIC) + " but found " + Arrays.toString(magic));
             }
             final long footerIndex = footerLengthIndex - footerLength;
             if (footerIndex < MAGIC.length || footerIndex >= footerLengthIndex) {
-                throw new ParquetFileReaderException(
+                throw new InvalidParquetFileException(
                         "corrupted file: the footer index is not within the file: " + footerIndex);
             }
             readChannel.position(footerIndex);
@@ -165,21 +182,24 @@ public class ParquetFileReader {
     private int readIntLittleEndian(SeekableByteChannel f) throws IOException {
         ByteBuffer tempBuf = ByteBuffer.allocate(Integer.BYTES);
         tempBuf.order(ByteOrder.LITTLE_ENDIAN);
-        int read = f.read(tempBuf);
-        if (read != 4) {
-            throw new IOException("Expected four bytes, only read " + read);
-        }
+        Helpers.readExact(f, tempBuf);
         tempBuf.flip();
         return tempBuf.getInt();
     }
 
-    public RowGroupReader getRowGroup(int groupNumber) {
+    /**
+     * Create a {@link RowGroupReader} object for provided row group number
+     * 
+     * @param version The "version" string from deephaven specific parquet metadata, or null if it's not present.
+     */
+    public RowGroupReader getRowGroup(final int groupNumber, final String version) {
         return new RowGroupReaderImpl(
                 fileMetaData.getRow_groups().get(groupNumber),
                 channelsProvider,
-                rootPath,
+                rootURI,
                 type,
-                getSchema());
+                getSchema(),
+                version);
     }
 
     private static MessageType fromParquetSchema(List<SchemaElement> schema, List<ColumnOrder> columnOrders)
@@ -236,14 +256,13 @@ public class ParquetFileReader {
             }
 
             if (schemaElement.isSetLogicalType()) {
-                ((Types.Builder) childBuilder)
-                        .as(getLogicalTypeAnnotation(schemaElement.logicalType));
+                ((Types.Builder) childBuilder).as(getLogicalTypeAnnotation(schemaElement.logicalType));
             }
 
             if (schemaElement.isSetConverted_type()) {
-                LogicalTypeAnnotation originalType =
-                        getLogicalTypeAnnotation(schemaElement.converted_type, schemaElement);
-                LogicalTypeAnnotation newOriginalType = schemaElement.isSetLogicalType()
+                final LogicalTypeAnnotation originalType = getLogicalTypeAnnotation(
+                        schemaElement.converted_type, schemaElement.logicalType, schemaElement);
+                final LogicalTypeAnnotation newOriginalType = schemaElement.isSetLogicalType()
                         && getLogicalTypeAnnotation(schemaElement.logicalType) != null
                                 ? getLogicalTypeAnnotation(schemaElement.logicalType)
                                 : null;
@@ -290,20 +309,20 @@ public class ParquetFileReader {
             case LIST:
                 return LogicalTypeAnnotation.listType();
             case TIME:
-                TimeType time = type.getTIME();
+                final TimeType time = type.getTIME();
                 return LogicalTypeAnnotation.timeType(time.isAdjustedToUTC, convertTimeUnit(time.unit));
             case STRING:
                 return LogicalTypeAnnotation.stringType();
             case DECIMAL:
-                DecimalType decimal = type.getDECIMAL();
+                final DecimalType decimal = type.getDECIMAL();
                 return LogicalTypeAnnotation.decimalType(decimal.scale, decimal.precision);
             case INTEGER:
-                IntType integer = type.getINTEGER();
+                final IntType integer = type.getINTEGER();
                 return LogicalTypeAnnotation.intType(integer.bitWidth, integer.isSigned);
             case UNKNOWN:
                 return null;
             case TIMESTAMP:
-                TimestampType timestamp = type.getTIMESTAMP();
+                final TimestampType timestamp = type.getTIMESTAMP();
                 return LogicalTypeAnnotation.timestampType(timestamp.isAdjustedToUTC, convertTimeUnit(timestamp.unit));
             default:
                 throw new ParquetFileReaderException("Unknown logical type " + type);
@@ -345,9 +364,9 @@ public class ParquetFileReader {
         return org.apache.parquet.schema.ColumnOrder.undefined();
     }
 
-    private static LogicalTypeAnnotation getLogicalTypeAnnotation(ConvertedType type, SchemaElement schemaElement)
-            throws ParquetFileReaderException {
-        switch (type) {
+    private static LogicalTypeAnnotation getLogicalTypeAnnotation(final ConvertedType convertedType,
+            final LogicalType logicalType, final SchemaElement schemaElement) throws ParquetFileReaderException {
+        switch (convertedType) {
             case UTF8:
                 return LogicalTypeAnnotation.stringType();
             case MAP:
@@ -359,19 +378,23 @@ public class ParquetFileReader {
             case ENUM:
                 return LogicalTypeAnnotation.enumType();
             case DECIMAL:
-                int scale = schemaElement == null ? 0 : schemaElement.scale;
-                int precision = schemaElement == null ? 0 : schemaElement.precision;
+                final int scale = schemaElement == null ? 0 : schemaElement.scale;
+                final int precision = schemaElement == null ? 0 : schemaElement.precision;
                 return LogicalTypeAnnotation.decimalType(scale, precision);
             case DATE:
                 return LogicalTypeAnnotation.dateType();
             case TIME_MILLIS:
+                // isAdjustedToUTC parameter is ignored while reading Parquet TIME type, so disregard it here
                 return LogicalTypeAnnotation.timeType(true, LogicalTypeAnnotation.TimeUnit.MILLIS);
             case TIME_MICROS:
                 return LogicalTypeAnnotation.timeType(true, LogicalTypeAnnotation.TimeUnit.MICROS);
             case TIMESTAMP_MILLIS:
-                return LogicalTypeAnnotation.timestampType(true, LogicalTypeAnnotation.TimeUnit.MILLIS);
+                // Converted type doesn't have isAdjustedToUTC parameter, so use the information from logical type
+                return LogicalTypeAnnotation.timestampType(isAdjustedToUTC(logicalType),
+                        LogicalTypeAnnotation.TimeUnit.MILLIS);
             case TIMESTAMP_MICROS:
-                return LogicalTypeAnnotation.timestampType(true, LogicalTypeAnnotation.TimeUnit.MICROS);
+                return LogicalTypeAnnotation.timestampType(isAdjustedToUTC(logicalType),
+                        LogicalTypeAnnotation.TimeUnit.MICROS);
             case INTERVAL:
                 return LogicalTypeAnnotation.IntervalLogicalTypeAnnotation.getInstance();
             case INT_8:
@@ -396,8 +419,21 @@ public class ParquetFileReader {
                 return LogicalTypeAnnotation.bsonType();
             default:
                 throw new ParquetFileReaderException(
-                        "Can't convert converted type to logical type, unknown converted type " + type);
+                        "Can't convert converted type to logical type, unknown converted type " + convertedType);
         }
+    }
+
+    /**
+     * Helper method to determine if a logical type is adjusted to UTC.
+     * 
+     * @param logicalType the logical type to check
+     * @return true if the logical type is a timestamp adjusted to UTC, false otherwise
+     */
+    private static boolean isAdjustedToUTC(final LogicalType logicalType) {
+        if (logicalType.getSetField() == LogicalType._Fields.TIMESTAMP) {
+            return logicalType.getTIMESTAMP().isAdjustedToUTC;
+        }
+        return false;
     }
 
     public MessageType getSchema() {
